fix: adjustments for contrast themes

--- a/src/assets/styles/components/_accordion.css
+++ b/src/assets/styles/components/_accordion.css
@@ -35,6 +35,19 @@
         width: 1.125rem;
     }
 
+    &:hover {
+        background-color: var(--fl-linkFgColor, var(--color-indigo-200));
+        box-shadow:
+            inset 0 0.125rem 0 0 var(--fl-linkFgColor, var(--color-indigo-700)),
+            1.25rem 0 0 0 var(--fl-linkFgColor, var(--color-indigo-200)),
+            -1.25rem 0 0 0 var(--fl-linkFgColor, var(--color-indigo-200));
+        color: var(--fl-linkBgColor, var(--color-indigo-700));
+
+        &::after {
+            background-color: var(--fl-linkBgColor, var(--color-indigo-700));
+        }
+    }
+
     &:focus {
         outline: 1px solid transparent;
     }
@@ -44,19 +57,13 @@
     transform: rotate(180deg);
 }
 
-.accordion:has(summary:hover) {
-    background-color: var(--fl-bgColor, var(--color-indigo-200));
-    box-shadow:
-        0.625rem 0 0 0 var(--fl-bgColor, var(--color-indigo-200)),
-        -0.625rem 0 0 0 var(--fl-bgColor, var(--color-indigo-200));
-}
-
 .accordion:focus-within {
     border-radius: 0.1875rem;
     box-shadow: inset 0 0 0 0.125rem var(--fl-linkFgColor, var(--color-indigo-700));
 }
 
 .accordion__content {
+    padding-block-start: 1em;
     padding-block-end: 2.1875rem;
 }
 
